# audioserve

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.old.debian  Dockerfile.static  Dockerfile.test  README.md  SECURITY.md  _build_static.sh  audioserve.sh  build.rs  build_static.sh  codecov.yml  docker_push.sh  renovate.json
.github/workflows/: binary-release.yml  build_dev_image.yml  build_experimental_image.yml  deploy-demo.yml  rust_check.yml
client/: README.md  index.html  package-lock.json  package.json  script.js  styles.css  webpack.common.js  webpack.dev.js  webpack.prod.js
client/src/: .jshintrc  config.js  debug.js  main.js  player.css  player.js  styles.css  sync.js
crates/async-tar/: Cargo.toml  README.md
crates/async-tar/examples/: list_tar.rs  normal_tar.rs
crates/async-tar/src/: lib.rs
crates/async-zip/: Cargo.toml
crates/async-zip/examples/: zip.rs
crates/async-zip/src/: date.rs  error.rs  lib.rs  zip.rs
crates/cachedirtree/: Cargo.toml  README.md
crates/cachedirtree/examples/: watch_dir.rs
crates/cachedirtree/src/: lib.rs  tree.rs  utils.rs
crates/cachedirtree/test_data/: machacek
crates/cachedirtree/test_data/Chesterton Gilbert Keith/: Doyle Arthur Conan
crates/col-util/: Cargo.toml
crates/col-util/src/: main.rs
crates/collection/: Cargo.toml  build.rs  legacy.rs
crates/collection/src/: audio_folder.rs  audio_meta.rs  cache.rs  collator.rs  common.rs  error.rs  legacy_pos.rs  lib.rs  no_cache.rs  playlist.rs  position.rs  util.rs
crates/collection/src/cache/: inner.rs  mod.rs  update.rs  util.rs
crates/file-cache/: .test-features  Cargo.toml  README.md
crates/file-cache/src/: asynch.rs  error.rs  lib.rs
crates/leaky-cauldron/: Cargo.toml
crates/leaky-cauldron/benches/: bench.rs
crates/leaky-cauldron/src/: lib.rs
crates/media_info/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_ffmpeg.sh  generate_ffi.sh  wrapper.h
crates/media_info/examples/: media_info.rs
crates/media_info/src/: ffi.rs  ffi_ffmpeg-4.3.1.rs  ffi_ffmpeg-4.4.6.rs  ffi_ffmpeg-5.0.1.rs  ffi_ffmpeg-5.1.7.rs  ffi_ffmpeg-6.0.rs  ffi_ffmpeg-6.1.1.rs  ffi_ffmpeg-7.1.1.rs  ffi_ffmpeg-8.0.rs  ffi_ffmpeg-8.1.rs  lib.rs  tags.rs
crates/myhy/: Cargo.toml
crates/myhy/src/: lib.rs  request.rs  server.rs
crates/myhy/src/response/: compress.rs  cors.rs  file.rs  mod.rs
crates/myhy/src/server/: mod.rs  tls.rs
crates/proxy-headers/: Cargo.toml
crates/proxy-headers/src/: lib.rs  parser.rs
crates/websock/: Cargo.toml
crates/websock/examples/: echo-simple.rs  echo.rs  index.html
crates/websock/src/: lib.rs
docs/: api.md  audioserve-api-v1.yaml  deploy.md  pre-push  reverse_proxy.md  windows-build.md
docs/files/: audioserve_unraid.xml  run-audioserve.sh  run-nginx.sh
src/: cache.rs  config.rs  error.rs  main.rs  server.rs  subs.rs  tls.rs  util.rs  utils.rs
src/config/: cli.rs  error.rs  mod.rs  tags.rs  validators.rs
src/myhy/: mod.rs
src/myhy/response/: cors.rs  file.rs
src/services/: api.rs  audio_folder.rs  audio_meta.rs  auth.rs  compress.rs  files.rs  mod.rs  proxy_headers.rs  request.rs  resp.rs  response.rs  rss.rs  search.rs  subs.rs  transcode.rs  types.rs
src/services/auth/: mod.rs  signed_url.rs
src/services/icon/: cache.rs  mod.rs
src/services/position/: cache.rs  mod.rs
src/services/response/: body.rs  compress.rs  cors.rs  file.rs  mod.rs
src/services/transcode/: cache.rs  codecs.rs  mod.rs
test_data/: 01-file.mp3.chapters  02-file.opus  03-file.mka  playlist.m3u  sample-config.yaml  shared-secret  transcodings.1.yaml  transcodings.2.yaml  transcodings.yaml
tests/: test_binary.rs
tests/bench-audioserve/: bench-with-oha.py  results_20231219.txt
