[package]
name = "audioserve"
version = "0.19.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

[workspace]
members = ["crates/*"]

[dependencies]
# to assure minimum version of rustc still to be at least 1.52
indexmap = "=1.8.2"
hashbrown = "=0.11.2"

bytes = "1.0"
env_logger = "0.9"
log = {version="0.4", features = ["release_max_level_info", "max_level_trace"]}
hyper = {version="0.14", features = ["full"]}
headers = "0.3"
futures = "0.3"
mime = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
clap = "2"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
url = "2.2"
percent-encoding = "2.1"
num_cpus = "1.13"
ring = "0.16"
data-encoding = "2.3"
regex = "1.4"
tokio = {version="1.2", features=["full"]}

dirs = "4.0"
csv = "1.1"
linked-hash-map = {git="https://github.com/izderadicka/linked-hash-map.git", version="0.5.3", features=["serde_impl"]}

# for tls
tokio-native-tls = {version="0.3", optional=true}
native-tls = {version="0.2", optional=true}

leaky-cauldron = {path="crates/leaky-cauldron"}
tokio-util = {version="0.6", optional=true, features=["codec"]}
cron = {version="0.9", optional=true}
chrono = {version="0.4", optional=true}


# this repo dependencies
collection = {path="crates/collection", features=["async"]}
proxy-headers = {path="crates/proxy-headers", optional=true}
simple-file-cache = {path="crates/file-cache", features=["asynch"], optional=true }
async-tar = {path="crates/async-tar", optional=true}
async-zip = {path="crates/async-zip", optional=true}
websock = {path="crates/websock", optional = true}

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[features]
default = ["tls", "symlinks", "folder-download", "shared-positions", "behind-proxy"]
# default
tls=["tokio-native-tls", "native-tls"]
symlinks=["collection/symlinks"]

folder-download = ["async-tar", "async-zip"]
folder-download-default-tar =[]
shared-positions = ["websock", "cron", "chrono"]
behind-proxy = ["proxy-headers"]
# non-default
transcoding-cache=["simple-file-cache", "tokio-util"]
# for static compilation only
partially-static = ["collection/partially-static"]
static = ["collection/static"]
collation = ["collection/collation"]
collation-static = ["collection/collation-static"]
tags-encoding = ["collection/tags-encoding"]



[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
reqwest = {version="0.11", features=['blocking', 'json']}
escargot = "0.5" 
tempdir = "0.3"
