[package]
name = "audioserve"
version = "0.25.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["crates/*"]

[dependencies]

bytes = "1.2"
env_logger = "0.10"
log = {version="0.4", features = ["release_max_level_info", "max_level_trace"]}
hyper = {version="0.14", features = ["full"]}
headers = "0.3"
futures = "0.3"
mime = "0.3"
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
serde_yaml = "0.9"
clap = {version="4", features=["cargo", "env"]}
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
url = "2.2"
percent-encoding = "2.1"
num_cpus = "1.13"
ring = "0.16"
data-encoding = "2.3"
regex = "1.4"
tokio = {version="1.20", features=["full"]}

dirs = "4.0"
csv = "1.1"

image="0.24"

# for tls
rustls ={version="0.20", optional=true}
tokio-rustls = { version="0.23", optional=true, default-features = false}
futures-util = { version = "0.3", default-features = false, optional=true }
rustls-pemfile = { version = "1", optional=true}

leaky-cauldron = {path="crates/leaky-cauldron"}
tokio-util = {version="0.7", optional=true, features=["codec"]}
cron = {version="0.12", optional=true}
chrono = {version="0.4", optional=true}


# this repo dependencies
collection = {path="crates/collection", features=["async"]}
proxy-headers = {path="crates/proxy-headers", optional=true}
simple-file-cache = {path="crates/file-cache", features=["asynch"]}
async-tar = {path="crates/async-tar", optional=true}
async-zip = {path="crates/async-zip", optional=true}
websock = {path="crates/websock", optional = true}

[target.'cfg(unix)'.dependencies]
nix = "0.26"

[features]
default = ["tls", "symlinks", "folder-download", "shared-positions", "behind-proxy"]
# default
tls=["rustls", "tokio-rustls", "futures-util", "rustls-pemfile"]
symlinks=["collection/symlinks"]

folder-download = ["async-tar", "async-zip"]
folder-download-default-tar =[]
shared-positions = ["websock", "cron", "chrono"]
behind-proxy = ["proxy-headers"]
# non-default
transcoding-cache=["tokio-util"]
# for static compilation only
partially-static = ["collection/partially-static"]
static = ["collection/static"]
collation = ["collection/collation"]
collation-static = ["collection/collation-static"]
tags-encoding = ["collection/tags-encoding"]



[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
reqwest = {version="0.11", features=['blocking', 'json'], default-features = false}
escargot = "0.5" 
tempdir = "0.3"
