[package]
name = "async-tar"
version = "0.1.2"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

[dependencies]
tar="0.4"
futures="0.3"
tokio={version="1.29", features=["fs"]}

[dev-dependencies]
tempfile="3.7"
bytes = "1.4"
tokio-util = {version="0.7", features=["codec"]}
tokio={version="1.29", features=["macros", "rt"]}

