[package]
name = "async-tar"
version = "0.1.2"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

[dependencies]
tar="0.4"
futures="0.3"
tokio={version="1.36", features=["fs"]}

[dev-dependencies]
tempfile="3.9"
bytes = "1.5"
tokio-util = {version="0.7", features=["codec"]}
tokio={version="1.36", features=["macros", "rt"]}

