[package]
name = "async-zip"
version = "0.1.1"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version="1.35", features=["full"]}
bytes = "1.5"
chrono = "0.4"
thiserror = "1.0"
crc32fast = "1.3"

[dev-dependencies]
zip = {version="0.6", default-features=false}
