[package]
name = "async-zip"
version = "0.1.1"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
bytes = "1.6"
chrono = "0.4"
thiserror.workspace = true
crc32fast = "1.4"

[dev-dependencies]
zip = { version = "4.0.0", default-features = false }
