[package]
name = "cachedirtree"
version = "0.2.2"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

[dependencies]
ego-tree="0.6"
bit-vec = "0.7.0"
notify = "6.1"
derive_builder = "0.20"


[dependencies.log]
version = "0.4"


[dev-dependencies]
env_logger = "0.11.3"

[features]
default=["symlinks"]
symlinks=[]
