[package]
name = "cachedirtree"
version = "0.2.2"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

[dependencies]
ego-tree="0.10"
bit-vec = "0.8.0"
notify = "8.0"
derive_builder = "0.20"


[dependencies.log]
version = "0.4"


[dev-dependencies]
env_logger = "0.11.3"

[features]
default=["symlinks"]
symlinks=[]
