[package]
name = "collection"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev_dependencies]
serde_json ="1.0"
env_logger = "0.9"
tempdir = "0.3"
fs_extra = "1.2"
anyhow = "1.0"

[dependencies]

media_info = {path="../media_info"}
sled = {version="0.34", features=["compression"]}
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
log="0.4"
regex = "1.5"
csv = "1.1"
mime_guess = "2.0"
unicase = "2.6"
unicase_serde = "0.1"
ring = "0.16"
bincode = "1.3"
notify = "4.0"

tokio = {version="1", optional=true, features=["rt"]}

[features]
partially-static = ["media_info/partially-static"]
static = ["media_info/static"]
async = ["tokio"]
symlinks = []
