[package]
name = "simple-file-cache"
version = "0.2.2"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

[dependencies]
linked-hash-map = "0.5.4"
#filetime = "0.2"
rand = "0.8"
data-encoding = "2.3"
thiserror ="1.0"
log = "0.4"
byteorder = "1.4"

tokio = { version="1.2", optional=true, features=[ "rt", "fs"] }


[features]
asynch = ["tokio"]

[dev-dependencies]
env_logger = "0.8"
tempfile ="3.2"
tokio = { version="1.2", features=["io-util", "macros",] }


