[package]
name = "simple-file-cache"
version = "0.2.2"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

[dependencies]
linked-hash-map = "0.5.6"
rand = "0.8"
data-encoding = "2.3"
thiserror ="1.0"
log = "0.4"
byteorder = "1.4"

tokio = { version="1.28", optional=true, features=[ "rt", "fs"] }


[features]
asynch = ["tokio"]

[dev-dependencies]
env_logger = "0.10"
tempfile ="3.6"
tokio = { version="1.28", features=["io-util", "macros",] }


