[package]
name = "leaky-cauldron"
version = "0.2.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio={version="1.29", features=["macros", "test-util", "rt-multi-thread"]}