[package]
name = "leaky-cauldron"
version = "0.3.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio={version="1.37", features=["macros", "test-util", "rt-multi-thread"]}
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false