[package]
name = "media_info"
version = "0.3.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
thiserror = "1.0"
encoding = {version="0.2", optional=true}

[dev-dependencies]
clap ={version="4", features=["derive"]}

[features]
static=[]
partially-static=[]
alternate-encoding=["encoding"]

