[package]
name = "myhy"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "Convenience wrapper around hyper and http libs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="1.4", features = ["full"]}
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["tokio", "server", "server-auto"] }
headers = "0.4.0"
http = "1.1.0"
tokio = {version="1.37", features=["full"]}
log = {version="0.4", features = ["release_max_level_info", "max_level_trace"]}
anyhow = "1.0.82"
bytes = "1.6.0"
percent-encoding = "2.3.1"
regex = "1.10.4"
url = "2.5.0"
futures = "0.3.30"
mime = "0.3.17"
serde = "1.0.199"
serde_json = "1.0.116"
mime_guess = "2.0"
flate2 = "1.0.30"
futures-util = "0.3.30"

# for tls
tokio-rustls = { version="0.26", optional=true, default-features = false, features=["logging", "tls12", "ring"]}
rustls-pemfile = { version = "2", optional=true}
rustls-pki-types = {version="1", optional=true}

[features]
tls=["tokio-rustls", "rustls-pemfile", "rustls-pki-types"]


[dev-dependencies]
ring = "0.17.8"
