[package]
name = "proxy-headers"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
funty = "=1.1.0" # temporary workaround for bitvec compilation error
headers = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
env_logger = "0.8"
