[package]
name = "proxy-headers"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
headers = {git = "https://github.com/hyperium/headers"}
http = "1.0"
lazy_static = "1.4"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
