[package]
name = "websock"
version = "0.4.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

[dependencies]

hyper = "0.14"
tokio = {version="1.29", features=["rt-multi-thread", "time"]}
futures = "0.3"
log = "0.4"
tokio-tungstenite = "0.20"
thiserror = "1.0"
headers = "0.3"

[dev-dependencies]
env_logger = "0.10"
hyper = {version="0.14", features=["server", "http1", "http2", "tcp"]}
tokio = {version="1.29", features=["macros", "io-util", "fs"]}