[package]
name = "websock"
version = "0.4.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

[dependencies]

hyper = {version="1.1.0", features=[]}
tokio = {version="1.34", features=["rt-multi-thread", "time"]}
futures = "0.3"
log = "0.4"
tokio-tungstenite = "0.21.0"
thiserror = "1.0"
headers = "0.4.0"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["tokio"] }

[dev-dependencies]
env_logger = "0.10"
hyper = {version="1.1.0", features=["server", "http1", "http2", "server"]}
tokio = {version="1.34", features=["macros", "io-util", "fs", "net"]}
